# AI_OS

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPERS.md  Dockerfile  LICENSE  LOG.txt  Nola-AI-OS-Installer.dmg  Nola.json  README.md  README.zh.md  SECURITY.md  STARTHERE.md  VSCODE_IMPORT_GUIDE.md  _test_boundaries.py  _test_new_features.py  _test_perf2.py  agent.py  background.py  chat_demo.py  cli.py  contract.py  create_app_bundle.sh  create_dmg_installer.sh  create_icon.sh  create_icon_from_image.sh  docker-compose.yml  install.sh  main.py  notes.txt  push.command  pyproject.toml  pyrightconfig.json  requirements-frozen.txt  requirements.txt  run-start.bat  run-start.command  run-start.desktop  (+10 more)
.github/: copilot-instructions.md  github_assess_manage.md
Feeds/: README.md  __init__.py  api.py  bridge.py  cli.py  events.py  intelligence.py  polling.py  router.py
Nola/: .gitignore  ARCHITECTURE.md  Nola.json  README.md  agent.py  chat_demo.py  migrate_profile_facts_to_l123.py  path_utils.py  server.py
Nola /: Nola.json  README.md  agent.py  relevance.py  relevancev2.py
Stimuli/: README.md  __init__.py  api.py  convo001.txt  readme.md  router.py
_archive/: WEDNESDAY_DEMO_CARD.md  evaluation_framework.md
agent/: ARCHITECTURE.md  README.md  agent.py
chat/: README.md  __init__.py  api.py  cli.py  import_convos.py  schema.py  train.py
data/: .last_turn_keys.json  big_state.txt  heartbeat.state.json  phantom_concepts.json  scaffolding_concepts.json  sensory_salience.json
docs/: ARCHITECTURE.md  ASSESSMENT.md  AUTONOMY_ASSESSMENT.md  BRAIN_MAPPING.md  CHANGELOG.md  COMPARISON_FRAMEWORKS.md  COMPARISON_OPENCLAW.md  COMPARISON_SOAR.md  CONSOLIDATED_INDEX.md  CONVERSATION_SEARCH_GUIDE.md  DEV_NOTES.md  HANDOFF.md  OUTREACH_STRATEGY.md  README.md  RESEARCH_PAPER.md  ROADMAP.md  Theory_convo.md  __init__.py  api.py  concept_attention_theory.md  license.md  research2.md  tests.md  train.py
eval/: README.md  __init__.py  _analyze_failures.py  _baseline_comparison.py  _cloud_identity_test.py  _dump_state.py  _evals_advanced.py  _gather_data.py  _judge.py  _long_horizon.py  _run.sh  _run_1_5b.py  _run_fixes.py  _show_3b_results.py  _show_failures.py  _side_by_side.py  ai_battle.py  all_results.json  analyze_training_data.py  api.py  baseline_comparison_log.txt  baseline_comparison_report.md  baseline_comparison_results.json  baseline_side_by_side.md  before_after.py  cli.py  cloud_identity_log.txt  cloud_identity_results.json  coherence_test.py  context_management.py  delegation_refusal.py  duel.py  dump_responses.py  evals.py  identity_battle.py  iteration_rate_sweep.py  judge.py  judges.py  long_horizon_log.txt  long_horizon_report.md  (+25 more)
experiments/: _check_gold.py  _check_self_data.py  _count_tokens.py  _survey.py  api.py  build_convo_sft.py  build_self_sft.py  build_tokenizer.py  chat_nola.py  count_data.py  dryrun_2048.py  dryrun_compare.py  nola_net.py  t3.py  test_diag.py  test_fast.py  test_inference.py  test_min.py  test_run2.py  train_nola.py
finetune/: README.md  __init__.py  _api_templates.py  adversarial_data.jsonl  api.py  auto_combined.jsonl  auto_fuse_sft.sh  behavioral_examples.py  build_convo_data.py  build_pretrain_data.py  (+25 more)
(+1131 files in other folders)
