[project]
name = "ai-os"
version = "0.1.0"
description = "Local-first AI with hierarchical experiential attention"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=23.2.1",
    "beautifulsoup4>=4.12.0",
    "duckduckgo-search>=7.0.0",
    "fastapi>=0.104.1",
    "httpx>=0.25.0",
    "lxml>=4.9.0",
    "numpy>=1.24.0",
    "ollama>=0.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "starlette>=0.27.0",
    "uvicorn[standard]>=0.24.0",
    "vobject>=0.9.6",
    "websockets>=12.0",
]

[project.optional-dependencies]
automation = [
    "kernel>=0.26.0",
    "playwright>=1.57.0",
]
encryption = [
    "cryptography>=41.0.0",
]

[project.scripts]
aios = "cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "flow: end-to-end pipeline tests",
    "pure: deterministic pure-function tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["Nola"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
